# spdlog_test

./: .gitignore  CMakeLists.txt
common_include/: CConfig.h
config/: subproject4.yaml
logs/: rotating_test.1.txt  rotating_test.2.txt  rotating_test.3.txt  rotating_test.txt
subproject1/: CMakeLists.txt
subproject1/src/: 1_basic_include.cpp
subproject2/: CMakeLists.txt
subproject3/: CMakeLists.txt
subproject3/src/: 3_fileslog.cpp
subproject4/: CMakeLists.txt
subproject4/src/: main.cpp
subproject4_yaml/: CMakeLists.txt
subproject4_yaml/config/: log_config.yaml
subproject4_yaml/include/: simple_log.h
subproject4_yaml/src/: main.cpp  simple_log.cpp
